[package]
name = "prod-j51b5"
version = "0.1.0"
edition = "2021"
authors = [ "jg <j51b5@pm.me>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http', 'axum'] }
worker-macros = { version="0.2.0", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
include_dir = "0.7.4"
askama = "0.13.0"
comrak = { version = "0.38.0", features = ["emojis", "shortcodes"] }
